updates to the paper

--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -10,7 +10,16 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
-
+@inproceedings{smyser2015use,
+  title={Use of resting-state functional MRI to study brain development and injury in neonates},
+  author={Smyser, Christopher D and Neil, Jeffrey J},
+  booktitle={Seminars in perinatology},
+  volume={39},
+  number={2},
+  pages={130--140},
+  year={2015},
+  organization={Elsevier}
+}
 @Article{rousseeuw1987silhouettes,
   author    = {Rousseeuw, Peter J},
   title     = {Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
