--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -10,6 +10,35 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
+@article{calhoun2009review,
+  title={A review of group ICA for fMRI data and ICA for joint inference of imaging, genetic, and ERP data},
+  author={Calhoun, Vince D and Liu, Jingyu and Adal{\i}, T{\"u}lay},
+  journal={Neuroimage},
+  volume={45},
+  number={1},
+  pages={S163--S172},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{posner2014connecting,
+  title={Connecting the dots: a review of resting connectivity MRI studies in attention-deficit/hyperactivity disorder},
+  author={Posner, Jonathan and Park, Christine and Wang, Zhishun},
+  journal={Neuropsychology review},
+  volume={24},
+  number={1},
+  pages={3--15},
+  year={2014},
+  publisher={Springer}
+}
+@article{redcay2013intrinsic,
+  title={Intrinsic functional network organization in high-functioning adolescents with autism spectrum disorder},
+  author={Redcay, Elizabeth and Moran, Joseph M and Mavros, Penelope Lee and Tager-Flusberg, Helen and Gabrieli, John DE and Whitfield-Gabrieli, Susan},
+  journal={Frontiers in human neuroscience},
+  volume={7},
+  pages={573},
+  year={2013},
+  publisher={Frontiers}
+}
 @inproceedings{smyser2015use,
   title={Use of resting-state functional MRI to study brain development and injury in neonates},
   author={Smyser, Christopher D and Neil, Jeffrey J},
