update to the paper

--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -10,6 +10,14 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
+@article{sorkine2009least,
+  title={Least-squares rigid motion using svd},
+  author={Sorkine, Olga},
+  journal={Technical notes},
+  volume={120},
+  number={3},
+  year={2009}
+}
 @article{calhoun2009review,
   title={A review of group ICA for fMRI data and ICA for joint inference of imaging, genetic, and ERP data},
   author={Calhoun, Vince D and Liu, Jingyu and Adal{\i}, T{\"u}lay},
